# rfPacketRx_CC1310_LAUNCHXL_nortos_ccs

./: .ccsproject  .cproject  .gitignore  CMakeLists.txt  README.md  SerialPort.c  SerialPort.h  rfPacketRx.c  utils.c  utils.h
.launches/: rfPacketRx_CC1310_LAUNCHXL_nortos_ccs.launch
smartrf_settings/: smartrf_settings.c  smartrf_settings.h
targetConfigs/: CC1310F128.ccxml
